重构Omni逻辑